src/objects/MUSW__EventLog__c.object
<CustomObject>
    <description>This object is used to log the event for each action of users.</description>
    <fields>
        <fullName>MUSW__Apex_Code_Name__c</fullName>
        <description>It should be either Appex Class or Appex Trigger Name</description>
        <label>Apex Code Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Apex_Method__c</fullName>
        <description>The method name which is executed.</description>
        <label>Apex Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Automation_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Automation Rule</label>
        <referenceTo>MUSW__Automation_Rule__c</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>Event_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Count__c</fullName>
        <label>Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Database_Operation__c</fullName>
        <label>Database Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__MessageLong__c</fullName>
        <label>Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Message__c</fullName>
        <description>This is used to show the message of logging.</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Record_ID__c</fullName>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__SessionId__c</fullName>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INFO</fullName>
                    <default>true</default>
                    <label>INFO</label>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Time_Stamp__c</fullName>
        <description>This is used to record the time stamp</description>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GENERAL</fullName>
                    <default>true</default>
                    <label>GENERAL</label>
                </value>
                <value>
                    <fullName>SOQL</fullName>
                </value>
                <value>
                    <fullName>SOSL</fullName>
                </value>
                <value>
                    <fullName>DML</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>WEBSERVICES</fullName>
                </value>
                <value>
                    <fullName>EXCEPTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MUSW__Default</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Apex_Code_Name__c</columns>
        <columns>MUSW__MessageLong__c</columns>
        <columns>MUSW__Type__c</columns>
        <columns>MUSW__Severity__c</columns>
        <columns>MUSW__User__c</columns>
        <columns>MUSW__Time_Stamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>Default</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>